# django-translation-lint

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
src/django_translation_lint/: cli.py
tests/: test_cli.py
