[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "django-translation-lint"
version = "0.1.0"
description = "A pre-commit hook to enforce Django translation string rules"
requires-python = ">=3.10"

authors = [
  { name = "Ali Hosseini" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Django",
]

[project.scripts]
django-translation-lint = "django_translation_lint.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]